src/objects/Channel_Qualifications__c.object
<CustomObject>
    <fields>
        <fullName>Market_Answer_1__c</fullName>
        <description>R5- Picklist field contains rating values for Answer 1 - Market section</description>
        <inlineHelpText>Existing sales to focused market with current product portfolio, installed base, references, order log, and customer analysis. (1-Low &amp; 6-High)</inlineHelpText>
        <label>Answer 1</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Market_Answer_2__c</fullName>
        <description>R5- Picklist field contains rating values for Answer 2 - Market section</description>
        <inlineHelpText>Ask customers, references, &quot;general networking&quot;, hot projects, and lost projects. (1-Low &amp; 6-High)</inlineHelpText>
        <label>Answer 2</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Market_Flag_1__c</fullName>
        <description>R5 - Flag for Must Have Weight</description>
        <formula>IF((Market_Value_1__c = &quot;Must have&quot;),IMAGE(&quot;/resource/WarningAlertImage&quot;, &quot;Warning&quot;,15,15),&quot;&quot;)</formula>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Notes__c</fullName>
        <description>R5 - Notes under Market Section</description>
        <inlineHelpText>Additional impressions</inlineHelpText>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Market_Question_1__c</fullName>
        <defaultValue>$Label.Market_Question_1</defaultValue>
        <description>R5 - Text field to capture the Question 1- Market section</description>
        <inlineHelpText>Existing sales to focused market with current product portfolio, installed base, references, order log, and customer analysis.</inlineHelpText>
        <label>Question 1</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Market_Question_2__c</fullName>
        <defaultValue>$Label.Market_Question_2</defaultValue>
        <description>R5 - Text field to capture the Question 2- Market section</description>
        <inlineHelpText>Ask customers, references, &quot;general networking&quot;, hot projects, and lost projects.</inlineHelpText>
        <label>Question 2</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Market_Score__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>R5 Market Score</description>
        <inlineHelpText>Weighted average of rates given in this section</inlineHelpText>
        <label>Market Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Market_Value_1__c</fullName>
        <description>R5 - Formula field to populate the value for Market value 1</description>
        <formula>IF(OR(ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Distributor (DIS)&quot;),ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Panel builder (PBL)&quot;),ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Service Provider (SPRO)&quot;),ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Installer (INST)&quot;)) , &quot;3&quot;, IF(OR(ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Technical distributor (TDIS)&quot;), ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;System integrator (SYIN)&quot;), ISPICKVAL(Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Original Equipment Manufacturer (OEM)&quot;), ISPICKVAL(Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Engineering, Procurement and Construction (EPC)&quot;)), &quot;Must have&quot;, &quot;&quot; ))</formula>
        <inlineHelpText>Weight given to this issue for weighted average calculation. Weights are channel class specific. Weight is between 1 and 6. Text “Must have” indicates the weight 6 and indicates that the value give must be greater than 4 to qualify.</inlineHelpText>
        <label>Weight</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Value_2__c</fullName>
        <description>R5 - Formula field to populate the value for Market value 2</description>
        <formula>IF(OR(ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c  , &quot;Distributor (DIS)&quot;), ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Technical distributor (TDIS)&quot;), ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;System integrator (SYIN)&quot;), ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Original Equipment Manufacturer (OEM)&quot;), ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Panel builder (PBL)&quot;), ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Service Provider (SPRO)&quot;), ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Engineering, Procurement and Construction (EPC)&quot;),ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Installer (INST)&quot;)), &quot;4&quot;, &quot;&quot; )</formula>
        <inlineHelpText>Weight given to this issue for weighted average calculation. Weights are channel class specific. Weight is between 1 and 6. Text “Must have” indicates the weight 6 and indicates that the value give must be greater than 4 to qualify.</inlineHelpText>
        <label>Weight</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Employees__c</fullName>
        <description>R5 - Number of Employees from Account</description>
        <formula>Account__r.NumberOfEmployees</formula>
        <label>Number of Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Organization_Answer_10__c</fullName>
        <description>R5- Picklist field contains rating values for Answer 10 - Organization and skills section</description>
        <inlineHelpText>Web pages, software tools, and support lines.(1-Low &amp; 6-High)</inlineHelpText>
        <label>Answer 10</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Organization_Answer_11__c</fullName>
        <description>R5- Picklist field contains rating values for Answer 11 - Organization and skills section</description>
        <inlineHelpText>Official documentation.(1-Low &amp; 6-High)</inlineHelpText>
        <label>Answer 11</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Organization_Answer_1__c</fullName>
        <description>R5- Picklist field contains rating values for Answer 1 - Organization and skills section</description>
        <inlineHelpText>General perception and overview of the organization to serve market in general and targeted customers in particular. Maximum points if good availability for both internal/ external.(1-Low &amp; 6-High)</inlineHelpText>
        <label>Answer 1</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Organization_Flag_1__c</fullName>
        <description>R5 - Flag for Must Have Weight</description>
        <formula>IF(( Organization_Value_1__c = &quot;Must have&quot;),IMAGE(&quot;/resource/WarningAlertImage&quot;, &quot;Warning&quot;,15,15),&quot;&quot;)</formula>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Flag_2__c</fullName>
        <description>R5 - Flag for Must Have Weight</description>
        <formula>IF(( Organization_Value_2__c = &quot;Must have&quot;),IMAGE(&quot;/resource/WarningAlertImage&quot;, &quot;Warning&quot;,15,15),&quot;&quot;)</formula>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Flag_3__c</fullName>
        <description>R5 - Flag for Must Have Weight</description>
        <formula>IF(( Organization_Value_3__c  = &quot;Must have&quot;),IMAGE(&quot;/resource/WarningAlertImage&quot;, &quot;Warning&quot;,15,15),&quot;&quot;)</formula>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Notes__c</fullName>
        <description>R5 - Notes under Organization Section</description>
        <inlineHelpText>Additional impressions</inlineHelpText>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Organization_Question_10__c</fullName>
        <defaultValue>$Label.Organzation_Question_10</defaultValue>
        <description>R5 - Text field to capture the Question 10- Organization and skills section</description>
        <inlineHelpText>Web pages, software tools, and support lines.</inlineHelpText>
        <label>Question 10</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Organization_Question_11__c</fullName>
        <defaultValue>$Label.Organzation_Question_11</defaultValue>
        <description>R5 - Text field to capture the Question 11- Organization and skills section</description>
        <inlineHelpText>Official documentation</inlineHelpText>
        <label>Question 11</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Organization_Question_1__c</fullName>
        <defaultValue>$Label.Organzation_Question_1</defaultValue>
        <description>R5 - Text field to capture the Question 1- Organization and skills section</description>
        <inlineHelpText>General perception and overview of the organization to serve market in general and tarketed customers in particular. Maximum points if good availability for both internal/ external</inlineHelpText>
        <label>Question 1</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Organization_Score__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>R5 Organization Score</description>
        <inlineHelpText>Weighted average of rates given in this section</inlineHelpText>
        <label>Organization Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Organization_Value_10__c</fullName>
        <description>R5 - Formula field to populate the value for Organization value 10</description>
        <formula>IF(OR(ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c  , &quot;Distributor (DIS)&quot;), ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Technical distributor (TDIS)&quot;), ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;System integrator (SYIN)&quot;), ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Original Equipment Manufacturer (OEM)&quot;), ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Panel builder (PBL)&quot;),
ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Installer (INST)&quot;),
 ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Service Provider (SPRO)&quot;), ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Engineering, Procurement and Construction (EPC)&quot;)), &quot;3&quot;, &quot;&quot; )</formula>
        <inlineHelpText>Weight given to this issue for weighted average calculation. Weights are channel class specific. Weight is between 1 and 6. Text “Must have” indicates the weight 6 and indicates that the value give must be greater than 4 to qualify.</inlineHelpText>
        <label>Weight</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Value_11__c</fullName>
        <description>R5 - Formula field to populate the value for Organization value 11</description>
        <formula>IF(OR(ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c  , &quot;Distributor (DIS)&quot;), ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Technical distributor (TDIS)&quot;), ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;System integrator (SYIN)&quot;), ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Original Equipment Manufacturer (OEM)&quot;), ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Panel builder (PBL)&quot;),
ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Installer (INST)&quot;),
 ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Service Provider (SPRO)&quot;)), &quot;2&quot;, IF(ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Engineering, Procurement and Construction (EPC)&quot;), &quot;3&quot;, &quot;&quot;) )</formula>
        <inlineHelpText>Weight given to this issue for weighted average calculation. Weights are channel class specific. Weight is between 1 and 6. Text “Must have” indicates the weight 6 and indicates that the value give must be greater than 4 to qualify.</inlineHelpText>
        <label>Weight</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Value_1__c</fullName>
        <description>R5 - Formula field to populate the value for Organization value 1</description>
        <formula>IF(OR(ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Distributor (DIS)&quot;),ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;System integrator (SYIN)&quot;)),&quot;5&quot;, (IF(OR(ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Technical distributor (TDIS)&quot;), ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Original Equipment Manufacturer (OEM)&quot;)), &quot;Must have&quot;, IF(OR(ISPICKVAL(Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Panel builder (PBL)&quot;), ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Installer (INST)&quot;), ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Service Provider (SPRO)&quot;), ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Engineering, Procurement and Construction (EPC)&quot;)),&quot;4&quot;, &quot;&quot;))))</formula>
        <inlineHelpText>Weight given to this issue for weighted average calculation. Weights are channel class specific. Weight is between 1 and 6. Text “Must have” indicates the weight 6 and indicates that the value give must be greater than 4 to qualify.</inlineHelpText>
        <label>Weight</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_structure__c</fullName>
        <description>R5 - Owner structure from Account</description>
        <formula>TEXT( Account__r.Owner_structure__c )</formula>
        <label>Owner structure</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portfolio_Answer_1__c</fullName>
        <description>R5- Picklist field contains rating values for Answer 1 - Portfolio section</description>
        <inlineHelpText>Existing suppliers, business with complementary lines from total sales. (1-Low &amp; 6-High)</inlineHelpText>
        <label>Answer 1</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Portfolio_Answer_2__c</fullName>
        <description>R5- Picklist field contains rating values for Answer 2 - Portfolio section</description>
        <inlineHelpText>Open books, feedback from market, and check from other suppliers. (1-Low &amp; 6-High)</inlineHelpText>
        <label>Answer 2</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Portfolio_Answer_3__c</fullName>
        <description>R5- Picklist field contains rating values for Answer 3- Portfolio section</description>
        <inlineHelpText>Internal Review.(1-Low &amp; 6-High)</inlineHelpText>
        <label>Answer 3</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Portfolio_Flag_1__c</fullName>
        <description>R5 - Flag for Must Have Weight</description>
        <formula>IF((Portfolio_Value_1__c = &quot;Must have&quot;),IMAGE(&quot;/resource/WarningAlertImage&quot;, &quot;Warning&quot;,15,15),&quot;&quot;)</formula>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portfolio_Flag_4__c</fullName>
        <description>R5 - Flag for Must Have Weight</description>
        <formula>IF((Portfolio_Value_4__c = &quot;Must have&quot;),IMAGE(&quot;/resource/WarningAlertImage&quot;, &quot;Warning&quot;,15,15),&quot;&quot;)</formula>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portfolio_Notes__c</fullName>
        <description>R5 - Notes under Portfolio Section</description>
        <inlineHelpText>Additional impressions</inlineHelpText>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Portfolio_Question_1__c</fullName>
        <defaultValue>$Label.Portfolio_Question_1</defaultValue>
        <description>R5 - Text field to capture the Question 1- Portfolio section</description>
        <inlineHelpText>Existing suppliers, business with complementary lines from total sales.</inlineHelpText>
        <label>Question 1</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Portfolio_Question_2__c</fullName>
        <defaultValue>$Label.Portfolio_Question_2</defaultValue>
        <description>R5 - Text field to capture the Question 2- Portfolio section</description>
        <inlineHelpText>Open books, feedback from market, and check from other suppliers.</inlineHelpText>
        <label>Question 2</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Portfolio_Question_3__c</fullName>
        <defaultValue>$Label.Portfolio_Question_3</defaultValue>
        <description>R5 - Text field to capture the Question 3- Portfolio section</description>
        <inlineHelpText>Internal Review</inlineHelpText>
        <label>Question 3</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Portfolio_Score__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>R5 Portfolio Score</description>
        <inlineHelpText>Weighted average of rates given in this section</inlineHelpText>
        <label>Portfolio Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Portfolio_Value_1__c</fullName>
        <description>R5 - Formula field to populate the value for Portfolio value 1</description>
        <formula>IF(OR(ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c  , &quot;Distributor (DIS)&quot;), 
ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Technical distributor (TDIS)&quot;),
ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;System integrator (SYIN)&quot;), 
ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Panel builder (PBL)&quot;),
ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Installer (INST)&quot;),
ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Service Provider (SPRO)&quot;)), &quot;Must have&quot;, IF(OR(ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Engineering, Procurement and Construction (EPC)&quot;), ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Original Equipment Manufacturer (OEM)&quot;)), &quot;3&quot;, &quot;&quot; ))</formula>
        <inlineHelpText>Weight given to this issue for weighted average calculation. Weights are channel class specific. Weight is between 1 and 6. Text “Must have” indicates the weight 6 and indicates that the value give must be greater than 4 to qualify.</inlineHelpText>
        <label>Weight</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portfolio_Value_2__c</fullName>
        <description>R5 - Formula field to populate the value for Portfolio value 2</description>
        <formula>IF(OR(ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Distributor (DIS)&quot;),ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c, &quot;Technical distributor (TDIS)&quot;), ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;System integrator (SYIN)&quot;), ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Engineering, Procurement and Construction (EPC)&quot;)), &quot;3&quot;, (IF(OR(ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Panel builder (PBL)&quot;),
ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Installer (INST)&quot;),
ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Original Equipment Manufacturer (OEM)&quot;)),&quot;2&quot;, (IF(ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Service Provider (SPRO)&quot;), &quot;4&quot;, &quot;&quot;)))))</formula>
        <inlineHelpText>Weight given to this issue for weighted average calculation. Weights are channel class specific. Weight is between 1 and 6. Text “Must have” indicates the weight 6 and indicates that the value give must be greater than 4 to qualify.</inlineHelpText>
        <label>Weight</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portfolio_Value_3__c</fullName>
        <description>R5 - Formula field to populate the value for Portfolio value 3</description>
        <formula>IF(OR(ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c  , &quot;Distributor (DIS)&quot;), ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Technical distributor (TDIS)&quot;), ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;System integrator (SYIN)&quot;), ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Original Equipment Manufacturer (OEM)&quot;), ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Panel builder (PBL)&quot;),
ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Installer (INST)&quot;),
ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Service Provider (SPRO)&quot;), ISPICKVAL( Channel_Market_Coverage__r.Primary_Channel_Class__c , &quot;Engineering, Procurement and Construction (EPC)&quot;)), &quot;3&quot;, &quot;&quot; )</formula>
        <inlineHelpText>Weight given to this issue for weighted average calculation. Weights are channel class specific. Weight is between 1 and 6. Text “Must have” indicates the weight 6 and indicates that the value give must be greater than 4 to qualify.</inlineHelpText>
        <label>Weight</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Address_Country__c</fullName>
        <description>R5 - Copies Primary Address Country from Account .</description>
        <formula>TEXT( Account__r.Primary_Address_Country__c )</formula>
        <label>Primary Address Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Channel_Class__c</fullName>
        <description>R5 R5 - value of Channel_Market_Coverage__r.Primary_Channel_Class__c</description>
        <formula>TEXT(Channel_Market_Coverage__r.Primary_Channel_Class__c )</formula>
        <inlineHelpText>Shows value as defined in</inlineHelpText>
        <label>Primary Channel Class</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_Not_Qualified__c</fullName>
        <description>R5 - Reason for Not Qualified</description>
        <inlineHelpText>Choose the main reason why this company was not chosen to start co-operation with</inlineHelpText>
        <label>Reason for Not Qualified</label>
        <picklist>
            <picklistValues>
                <fullName>Company not interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Does not full fill must have requirements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other candidate chosen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other reason, see comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Created in error</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>R5 - Status</description>
        <inlineHelpText>Obsolete = Archived. Can be changed directly from draft if e.g. duplicate created by accident</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obsolete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_turnover__c</fullName>
        <description>R5 - Total turnover from Account</description>
        <formula>Account__r.Total_turnover__c</formula>
        <label>Total turnover</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Channel Partner Pre-Qualification</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Channel_Market_Coverage__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Pre-Qualification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Channel Partner Pre-Qualifications</pluralLabel>
    <recordTypes>
        <fullName>Channel_Qualification</fullName>
        <active>true</active>
        <description>R5 - Record Type created for Channel Qualification Layout</description>
        <label>Channel Qualification</label>
    </recordTypes>
    <recordTypes>
        <fullName>Channel_Qualification_Detail_Page</fullName>
        <active>true</active>
        <description>R5 - Record Type created for Channel Qualification Detail Page Layout</description>
        <label>Channel Qualification Detail Page</label>
    </recordTypes>
    <recordTypes>
        <fullName>Closed_Channel_Pre_Qualification</fullName>
        <active>true</active>
        <description>R5 - Closed Channel Pre-Qualification</description>
        <label>Closed Channel Pre-Qualification</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Clear_Reason_for_not_qualified</fullName>
        <active>true</active>
        <description>R5 - Clear the  &apos;Reason for not qualified &apos; value if the status is not declined.</description>
        <errorConditionFormula>TEXT(Status__c) != &apos;Declined&apos; &amp;&amp; NOT(ISBLANK(TEXT(Reason_for_Not_Qualified__c) ))</errorConditionFormula>
        <errorMessage>&quot;Reason for Not Qualified&quot; - field should be blank when the status is not Declined in the Channel Pre-Qualification.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Code_of_Conduct_Rule</fullName>
        <active>true</active>
        <description>R5 - Code of Conduct must be copied from the Account Channel Common data into the Channel Qualification.</description>
        <errorConditionFormula>AND( OR(ISPICKVAL(Status__c, &apos;In Approval&apos;), ISPICKVAL( Status__c , &apos;Completed&apos;)), Code_of_Conduct__c  = FALSE)</errorConditionFormula>
        <errorMessage>Code-of-conduct and NDA principles discussed with all personnel (also with new employees) and select the Code of conduct on the Channel Common Data.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Enter_Reason_for_not_qualified</fullName>
        <active>true</active>
        <description>R5 - Allows the user to enter &apos;Reason for not qualified &apos; value if the status is declined.</description>
        <errorConditionFormula>IF(ISPICKVAL( Status__c , &apos;Declined&apos;),   ISBLANK( TEXT( Reason_for_Not_Qualified__c ) ) , false)</errorConditionFormula>
        <errorMessage>&quot;Reason for Not Qualified&quot; - field is mandatory when declining a pre-qualification</errorMessage>
    </validationRules>
</CustomObject>